--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,15 @@ version '0.0.1'
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 ext {
     versions = [
-            javacord  : '3.4.0',
-            sdcf4j    : 'v1.0.10',
-            log4j     : '2.17.1',
-            json      : '20211205'
+            javacord: '3.4.0',
+            sdcf4j  : 'v1.0.10',
+            log4j   : '2.17.1',
+            json    : '20211205'
     ]
 }
 
@@ -23,6 +24,8 @@ dependencies {
     implementation "org.apache.logging.log4j:log4j-api:${versions.log4j}"
     implementation "org.apache.logging.log4j:log4j-jul:${versions.log4j}"
     implementation "org.json:json:${versions.json}"
+    implementation "de.btobastian.sdcf4j:sdcf4j-javacord:${versions.sdcf4j}"
+    implementation "de.btobastian.sdcf4j:sdcf4j-core:${versions.sdcf4j}"
 
     runtimeOnly "org.apache.logging.log4j:log4j-core:${versions.log4j}"
     runtimeOnly "org.apache.logging.log4j:log4j-slf4j-impl:${versions.log4j}"
