--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,11 @@ repositories {
 
 ext {
     versions = [
-            javacord: '3.4.0',
-            sdcf4j  : 'v1.0.10',
-            log4j   : '2.17.1',
-            json    : '20211205'
+            javacord : '3.4.0',
+            sdcf4j   : 'v1.0.10',
+            log4j    : '2.17.1',
+            json     : '20211205',
+            jcommands: '4.1.1'
     ]
 }
 
@@ -26,6 +27,7 @@ dependencies {
     implementation "org.json:json:${versions.json}"
     implementation "de.btobastian.sdcf4j:sdcf4j-javacord:${versions.sdcf4j}"
     implementation "de.btobastian.sdcf4j:sdcf4j-core:${versions.sdcf4j}"
+    implementation "com.github.S3nS3IW00:JCommands:${versions.jcommands}"
 
     runtimeOnly "org.apache.logging.log4j:log4j-core:${versions.log4j}"
     runtimeOnly "org.apache.logging.log4j:log4j-slf4j-impl:${versions.log4j}"
